--- a/public/login/login.html
+++ b/public/login/login.html
@@ -15,10 +15,10 @@
         <input id="password" type="password" placeholder="Password.."/>
        <div class="buttons">
         <button id="login" type="submit">Login</button>
-        <button id="signup" type="click">Signup</button>
        </div>
     </form>
 
+    <button id="signup" >Signup Page</button>
 
     
     </div><script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>  
