--- a/public/signup/signup.html
+++ b/public/signup/signup.html
@@ -14,7 +14,8 @@
         <input id="email" type="email" placeholder="Enter your email..."/>
         <label for="password">Password</label>
         <input type="password" id="password"/>
-        <button type="submit">Submit</button>
+        <button type="submit">Signup</button>
+        <button id="loginpagebtn">Login page</button>
     </form>
     
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
