--- a/public/Expense.html
+++ b/public/Expense.html
@@ -39,6 +39,7 @@
     <ul id="premiumUSerList"></ul>
        <button class="showpremuiumbutton">ShowPremiumUser</button>      
        <button class="buyMembership">buy premium membership</button>
+       <button id="showExpense">See All Expenses</button>
    
 
 
